Playback panel finalized.